feat: extract MessageDecoder interface
The various classes don't have any business dealing with JSON themselves.
This puts all the responsibility into MessageDecoder which can also be
implemented for MessagePack now.