@@ -1,6 +1,5 @@
 package io.vertx.wamp;
 
-import io.vertx.core.json.JsonArray;
 import io.vertx.wamp.messages.*;
 
 import java.util.Collections;
@@ -10,89 +9,69 @@ import java.util.Map;
 // construct message objects. For decoding data currently fixed on JSON
 // TODO: extract JSON stuff into separate codec functionality
 public class MessageFactory {
-    private MessageFactory() {
-    }
+  private MessageFactory() {
+  }
 
-    // only supports messages part of the receiving / broker end
-    public static WAMPMessage parseMessage(JsonArray message) {
-        final WAMPMessage.Type messageType = getMessageType(message);
-        message.remove(0);
-        switch (messageType) {
-            case HELLO:
-                return new HelloMessage(message);
-            case ABORT:
-                return new AbortMessage(message);
-            case GOODBYE:
-                return new GoodbyeMessage(message);
-            case SUBSCRIBE:
-                return new SubscribeMessage(message);
-            case UNSUBSCRIBE:
-                return new UnsubscribeMessage(message);
-            case PUBLISH:
-                return new PublishMessage(message);
-            default:
-                throw new IllegalArgumentException(String.format("Construction of %s not supported",
-                        messageType.name()));
-        }
+  // only supports messages part of the receiving / broker end
+  public static <I, O> WAMPMessage parseMessage(I message, MessageDecoder<I, O> messageDecoder) {
+    Map.Entry<WAMPMessage.Type, O> decoded = messageDecoder.parseMessage(message);
+    switch (decoded.getKey()) {
+      case HELLO:
+        return new HelloMessage(decoded.getValue(), messageDecoder);
+      case ABORT:
+        return new AbortMessage(decoded.getValue(), messageDecoder);
+      case GOODBYE:
+        return new GoodbyeMessage(decoded.getValue(), messageDecoder);
+      case SUBSCRIBE:
+        return new SubscribeMessage(decoded.getValue(), messageDecoder);
+      case UNSUBSCRIBE:
+        return new UnsubscribeMessage(decoded.getValue(), messageDecoder);
+      case PUBLISH:
+        return new PublishMessage(decoded.getValue(), messageDecoder);
+      default:
+        throw new IllegalArgumentException(String.format("Construction of %s not supported",
+            decoded.getKey().name()));
     }
+  }
 
-    static WAMPMessage createWelcomeMessage(long sessionId) {
-        final Map<String, Object> roles = Map.of("broker", Collections.emptyMap());
-        final Map<String, Object> details = Map.of("roles", roles, "agent", WAMPWebsocketServer.USER_AGENT);
-        return new WelcomeMessage(sessionId, details);
-    }
+  static WAMPMessage createWelcomeMessage(long sessionId) {
+    final Map<String, Object> roles = Map.of("broker", Collections.emptyMap());
+    final Map<String, Object> details = Map.of("roles", roles, "agent", WAMPWebsocketServer.USER_AGENT);
+    return new WelcomeMessage(sessionId, details);
+  }
 
-    static WAMPMessage createGoodbyeMessage(Uri reason) {
-        return new GoodbyeMessage(Map.of(), reason);
-    }
+  static WAMPMessage createGoodbyeMessage(Uri reason) {
+    return new GoodbyeMessage(Map.of(), reason);
+  }
 
-    static WAMPMessage createAbortMessage(Uri reason) {
-        return new AbortMessage(Map.of(), reason);
-    }
+  static WAMPMessage createAbortMessage(Uri reason) {
+    return new AbortMessage(Map.of(), reason);
+  }
 
-    static WAMPMessage createUnsubscribedMessage(long requestId) {
-        return new UnsubscribedMessage(requestId);
-    }
+  static WAMPMessage createUnsubscribedMessage(long requestId) {
+    return new UnsubscribedMessage(requestId);
+  }
 
-    static WAMPMessage createErrorMessage(WAMPMessage.Type messageType,
-                                          long requestId,
-                                          Map<String, Object> details,
-                                          Uri error) {
-        return new ErrorMessage(messageType, requestId, details, error);
-    }
+  static WAMPMessage createErrorMessage(WAMPMessage.Type messageType,
+                                        long requestId,
+                                        Map<String, Object> details,
+                                        Uri error) {
+    return new ErrorMessage(messageType, requestId, details, error);
+  }
 
-    private static WAMPMessage.Type getMessageType(JsonArray message) {
-        if (message.size() == 0) {
-            throw new WAMPProtocolException("No data in message");
-        }
-        try {
-            final Integer typeCode = message.getInteger(0);
-            if (typeCode == null) {
-                throw new WAMPProtocolException("No message type in message");
-            }
-            final WAMPMessage.Type messageType = WAMPMessage.Type.findByCode(typeCode);
-            if (messageType == null) {
-                throw new WAMPProtocolException("Unknown message type in message");
-            }
-            return messageType;
-        } catch (ClassCastException e) {
-            throw new WAMPProtocolException("Invalid message type in message");
-        }
-    }
+  public static WAMPMessage createSubscribedMessage(long id, long subscriptionId) {
+    return new SubscribedMessage(id, subscriptionId);
+  }
 
-    public static WAMPMessage createSubscribedMessage(long id, long subscriptionId) {
-        return new SubscribedMessage(id, subscriptionId);
-    }
-
-    public static EventMessage createEvent(long subscriptionId,
-                                           long publicationId,
-                                           Map<String, Object> details,
-                                           List<Object> arguments,
-                                           Map<String, Object> argumentsKw) {
-        return new EventMessage(subscriptionId,
-                publicationId,
-                details,
-                arguments,
-                argumentsKw);
-    }
+  public static EventMessage createEvent(long subscriptionId,
+                                         long publicationId,
+                                         Map<String, Object> details,
+                                         List<Object> arguments,
+                                         Map<String, Object> argumentsKw) {
+    return new EventMessage(subscriptionId,
+        publicationId,
+        details,
+        arguments,
+        argumentsKw);
+  }
 }
